TEIID-489 SQLXML should be a bound value